[package]
name = "game_friends_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
awc = "3.2.0"
regex = "1.9.6"
serde = { version="1.0.188", features=["derive"] }
serde_json = "1.0.107"
serde_qs = "0.12.0"
url = "2.3"